[package]
name = "time_tracker_rs"
version = "0.1.0"
authors = ["CoreyShupe <coreyshupe101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
csv = "1.1.3"
serde = { version = "1.0.16", features = ["derive"] }
druid = { version = "0.6.0", features = ["im"] }
druid-derive = "0.3.1"
im = { version = "15.0.0" }